--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "4.0.0-alpha.6",
     "hookrouter": "^1.2.5",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
@@ -16,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "sass": "^1.34.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
