--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toggle-button": "^2.2.0",
     "redux": "^4.1.0",
     "sass": "^1.34.1",
     "web-vitals": "^1.1.2"
