--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "bootstrap": "4.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -28,11 +29,27 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "npm run cy:run && npm run unit:test",
+    "pretest": "rm -rf .nyc_output || true",
     "eject": "react-scripts eject",
-    "e2e": "cypress open-ct"
+    "e2e": "cypress open-ct",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "precy:run": "rm -rf .nyc_output || true",
+    "unit:test": "react-scripts test --env=jsdom --watchAll=false --coverage --coverageDirectory=coverage-unit -u",
+    "e2e:coverage":"npx nyc report",
+    "mkdir:reports": "mkdir reports || true",
+    "precopy:reports": "npm run mkdir:reports",
+    "copy:reports": "cp coverage-e2e/coverage-final.json reports/from-cypress.json && cp coverage-unit/coverage-final.json reports/from-jest.json",
+    "precombine:reports": "npm run copy:reports && mkdir .nyc_output || true",
+    "combine:reports": "npx nyc merge reports && mv coverage.json .nyc_output/out.json",
+    "precoverage": "npm run combine:reports",
+    "coverage": "npx nyc report --reporter lcov --reporter text --report-dir coverage"
+  },
+  "nyc": {
+    "report-dir": "coverage-e2e"
   },
   "eslintConfig": {
     "extends": [
@@ -53,8 +70,11 @@
     ]
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.9.10",
+    "@cypress/instrument-cra": "^1.4.0",
     "@cypress/react": "^5.9.1",
     "@cypress/webpack-dev-server": "^1.4.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "cypress": "^7.7.0"
   }
 }
