Refactored header and added classnames library

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "bootstrap": "4.6.0",
+    "classnames": "^2.3.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "hookrouter": "^1.2.5",
@@ -39,7 +40,7 @@
     "cy:run": "cypress run",
     "precy:run": "rm -rf .nyc_output || true",
     "unit:test": "react-scripts test --env=jsdom --watchAll=false --coverage --coverageDirectory=coverage-unit -u",
-    "e2e:coverage":"npx nyc report",
+    "e2e:coverage": "npx nyc report",
     "mkdir:reports": "mkdir reports || true",
     "precopy:reports": "npm run mkdir:reports",
     "copy:reports": "cp coverage-e2e/coverage-final.json reports/from-cypress.json && cp coverage-unit/coverage-final.json reports/from-jest.json",
