--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@walletconnect/web3-provider": "^1.6.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "bootstrap": "4.6.0",
     "classnames": "^2.3.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "ethers": "^5.4.6",
+    "fortmatic": "^2.2.1",
     "hookrouter": "^1.2.5",
     "node-sass": "^6.0.0",
     "prettier": "^2.4.0",
@@ -28,7 +31,10 @@
     "react-toggle-button": "^2.2.0",
     "redux": "^4.1.0",
     "sass": "^1.34.1",
-    "web-vitals": "^1.1.2"
+    "walletlink": "^2.1.11",
+    "web-vitals": "^1.1.2",
+    "web3": "^1.5.2",
+    "web3modal": "^1.9.4"
   },
   "scripts": {
     "start": "react-scripts -r @cypress/instrument-cra start",
