--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "4.0.3",
     "react-toggle-button": "^2.2.0",
     "redux": "^4.1.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.34.1",
     "walletlink": "^2.1.11",
     "web-vitals": "^1.1.2",
