--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
@@ -18,6 +19,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "ethers": "^5.4.6",
     "fortmatic": "^2.2.1",
+    "graphql": "^15.6.0",
     "hookrouter": "^1.2.5",
     "node-sass": "^6.0.0",
     "prettier": "^2.4.0",
